# context

./: Cargo.toml  README.md  config.example.toml  context.py  presets.example.toml  test.txt  test2.txt
assets/: config.example.toml  presets.example.toml
src/: cli.rs  code.rs  common.rs  config.rs  db.rs  format.rs  fs.rs  lib.rs  main.rs
