[package]
name = "context"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1"
ignore = "0.4"
globset = "0.4"
anyhow = "1.0"
dirs = "6.0"
pathdiff = "0.2"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json"] }
dotenvy = "0.15"
