[package]
name = "context"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1"
ignore = "0.4"
globset = "0.4"
anyhow = "1.0"
dirs = "6.0"
pathdiff = "0.2"
log = "0.4"
env_logger = "0.11"
postgres = "0.19"
